--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ li{background: white;  list-style-type: none; width: 130px; display: inline;
 ul li a{display: block; text-decoration: none;margin-left: auto; margin-right: auto;
 	 color: gray; font-weight: 700}
 ul li a:hover{font-weight: 700; transition: all 0.5s;}
-h2{font-size: 2rem; text-align: center; line-height: 1.8;}
-h3{font-size: 1.4rem; text-align: center; font-weight: 500;}
+h2{font-size: 3rem; text-align: center; line-height: 2;}
+h3{font-size: 1.8rem; text-align: center; font-weight: 500; line-height: -2px;}
 	.row{width: 1200px; margin: auto; position: relative; }
 	.flexbox{display: flex;}
 	.col-1{width: 100px;}
@@ -32,6 +32,7 @@ h3{font-size: 1.4rem; text-align: center; font-weight: 500;}
 	.h-900{height: 900px;}
 	.h-1000{height: 1000px;}
 	.h-1200{height: 1200px;}
+	.h-1300{height: 1300px;}
 	.p-50{padding: 50px;}
 	.p-100{padding: 100px;}
 	.m-auto{margin: auto;}
@@ -43,6 +44,7 @@ h3{font-size: 1.4rem; text-align: center; font-weight: 500;}
 	.mt-150{margin-top:150px;}
 	.mt-200{margin-top: 200px;}
 	.mt-250{margin-top:250px;}
+	.mt-500{margin-top: 300px;}
 	.mb-10{margin-bottom:10px; }
 	.mb-20{margin-bottom:20px; }
 	.mb-30{margin-bottom:30px; }
@@ -58,9 +60,9 @@ h3{font-size: 1.4rem; text-align: center; font-weight: 500;}
 	.botton{display: block; width:300px; height:50px; 
 		 background: #6e9eea; text-align: center; 
 		line-height: 50px; text-decoration: none;}
-	.botton:hover{background: #CBDEF4; transition: all 0.5s; color: black;}
+	.botton:hover{background: #CBDEF4; transition: all 0.5s; }
 	.shape{position: absolute; left: 50%; margin-left: -40px; top: 100px; }
-	.img_1{width: 700px; height: auto; position: absolute; 
+	.img_1{margin-top: 20px;width: 700px; height: auto; position: absolute; 
 		left: 50%; margin-left: -350px; top: 350px;}
 #abs_1{top: 100px;}
 #abs_2{position: absolute;top: 1100px;left: 50%;margin-left: -150px;}
